Improving dark mode welcome window and bug fixes.

--- a/Website/www/inapp/welcome-dark.css
+++ b/Website/www/inapp/welcome-dark.css
@@ -106,3 +106,17 @@ input[type="number"]::placeholder,
 textarea::placeholder {
 	color: rgba(255, 255, 255, 0.25);
 }
+
+#dialog {
+	background-color: #2b2b2b;
+	border-color: #979797;
+	text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.3);
+}
+
+@supports (-webkit-backdrop-filter: blur(15px)) {
+	#dialog {
+		background-color: rgba(255, 255, 255, 0.1);
+		border-color: rgba(255, 255, 255, 0.5);
+		-webkit-backdrop-filter: blur(15px);
+	}
+}
