--- a/Website/www/inapp/welcome.css
+++ b/Website/www/inapp/welcome.css
@@ -113,10 +113,10 @@ p {
 	display: none;
 	position: fixed;
 	top: 30%;
-	width: 260px;
-	left: 50px;
+	width: 258px;
+	left: 49px;
 	background-color: #ffffff;
-	border-radius: 10px;
+	border-radius: 5px;
 	z-index: 101;
 	padding: 20px;
 	opacity: 0;
@@ -125,6 +125,7 @@ p {
 	transition-property: opacity;
 	transition-delay: 0s;
 	box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.3);
+	border: 1px solid #ffffff;
 }
 
 #dialog.exist {
